--- a/Blogging-Platform-Aws/src/main/resources/application.properties
+++ b/Blogging-Platform-Aws/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
-spring.datasource.url= jdbc:mysql://localhost:3306/BloggingAPI
-spring.datasource.username=root
-spring.datasource.password=Divya@1999
+spring.datasource.url= jdbc:mysql://52.66.253.125:3306/BloggingAPI
+spring.datasource.username=mg-test-1
+spring.datasource.password=1234
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 
