--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -28,5 +28,7 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: mvn -B package --file Blogging-Platform-Aws/pom.xml
+    - name: Execute Jar file
+      run: sudo kill -9 `sudo lsof -t -i:8080` & sudo java -jar /home/ubuntu/actions-runner/_work/BloggingAPI/BloggingAPI/Blogging-Platform-Aws/target/Blogging_Platform_Aws-0.0.1-SNAPSHOT.jar &
 
    
